# Copyright (c) 2020 FMSoft.

config("hals_external_library_config") {
  include_dirs = [
    "include",
  ]
}

shared_library("graphic_hals") {
  sources = [
    "src/hal_tick.cpp",
  ]

  public_configs = [":hals_external_library_config"]
  include_dirs = [
    "//foundation/graphic/lite/interfaces/kits/config",
    "//foundation/graphic/lite/interfaces/kits/utils",
  ]
  cflags = ["-Wall"]
  cflags_cc = cflags
}
