# Copyright (c) 2020 FMSoft.

shared_library("graphic_utils") {
  sources = [
    "src/color.cpp",
    "src/file.c",
    "src/geometry2d.cpp",
    "src/graphic_math.cpp",
    "src/linux_file.c",
    "src/mem_api.cpp",
    "src/style.cpp",
    "src/transform.cpp",
    "src/version.cpp",
  ]
  include_dirs = [
    "//foundation/graphic/lite/frameworks/ui/include",
    "//foundation/graphic/lite/interfaces/kits/config",
    "//foundation/graphic/lite/interfaces/kits/utils",
    "//foundation/graphic/lite/utils/include",
    "//third_party/bounds_checking_function/include",
  ]
  public_deps = [
    "//third_party/bounds_checking_function:libsec_shared",
    "//utils/native/lite/hilog:hilog_shared",
  ]
  cflags = ["-Wall"]
  cflags_cc = cflags
}
