# Copyright (c) 2020 FMSoft.

shared_library("ace_kit_timer") {
  sources = [
    "src/nativeapi_timer_task.c",
  ]
  cflags = ["-Wall"]

  include_dirs = [
    "include",
    "//utils/native/lite/include",
    "//utils/native/lite/kal/timer/include",
  ]
  public_deps = ["//utils/native/lite/kal/timer:kal_timer"]
}
