# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/aafwk/config.gni")

src_path = "//foundation/aafwk/frameworks/ability_lite/example/entry/src/main/cpp"

lite_library("hiability") {
    target_type = "shared_library"
    ldflags = [
        "-shared",
    ]
    sources = [
        "${src_path}/root_view_helper.cpp",
        "${src_path}/service_ability.cpp",
    ]

    if (enable_ohos_appexecfwk_feature_ability == true) {
        sources += [
            "${src_path}/main_ability.cpp",
            "${src_path}/second_ability.cpp",
            "${src_path}/main_ability_slice.cpp",
            "${src_path}/next_ability_slice.cpp",
            "${src_path}/second_ability_slice.cpp",
        ]
    }

    include_dirs = [
        ".",
        "//foundation/aafwk/frameworks/ability_lite/example/entry/src/main/cpp",
        "//foundation/aafwk/interfaces/innerkits/abilitymgr_lite",
        "//foundation/aafwk/interfaces/kits/ability_lite",
        "//foundation/aafwk/interfaces/kits/want_lite",
        "//foundation/appexecfwk/interfaces/kits/bundle_lite",
        "//foundation/appexecfwk/utils/bundle_lite",
        "//foundation/communication/interfaces/kits/ipc_lite",
        "//foundation/graphic/lite/interfaces/kits/config",
        "//foundation/graphic/lite/interfaces/kits/ui",
        "//foundation/graphic/lite/interfaces/kits/utils",
        "//kernel/liteos_a/kernel/common",
        "//kernel/liteos_a/kernel/include",
    ]

    deps = [
        "//foundation/aafwk/frameworks/ability_lite:aafwk_abilitykit_lite",
    ]

    defines = [
        "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
    ]

    if (enable_ohos_appexecfwk_feature_ability == true) {
        deps += [
            "//foundation/graphic/lite/frameworks/ui:ui",
        ]
        defines += [
            "ENABLE_WINDOW=1",
            "ABILITY_WINDOW_SUPPORT"
        ]
    }
    output_dir = "$root_out_dir/dev_tools/example"
}
