#
# 
#                           IMPORTANT NOTICE
# 
#  The following open source license statement does not apply to any
#  entity in the Exception List published by FMSoft.
# 
#  For more information, please visit:
# 
#  https://www.fmsoft.cn/exception-list
# 
#
#   This file is part of HybridOS, a developing operating system based on
#   MiniGUI. HybridOs will support embedded systems and smart IoT devices.
#
#   Copyright (C) 2020 Beijing FMSoft Technologies Co., Ltd.
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
#   Or,
#
#   As this program is a library, any link to this program must follow
#   GNU General Public License version 3 (GPLv3). If you cannot accept
#   GPLv3, you need to be licensed from FMSoft.
#
#   If you have got a commercial license of this program, please use it
#   under the terms and conditions of the commercial license.
#
#   For more information about the commercial license, please refer to
#   <http://www.minigui.com/blog/minigui-licensing-policy/>.
#


shared_library("surface") {
  sources = [
    "src/buffer_manager.cpp",
    "src/buffer_queue_consumer.cpp",
    "src/buffer_queue_producer.cpp",
    "src/buffer_queue.cpp",
    "src/surface_buffer_impl.cpp",
    "src/surface_impl.cpp",
    "src/surface.cpp"
  ]
  public_configs = [ ":surface_external_library_config" ]
  include_dirs = [
    "//kernel/liteos_a/kernel/include/",
    "//kernel/liteos_a/kernel/common",
    "//third_party/bounds_checking_function/include",
    "//drivers/hdf/lite/hdi/display/include",
    "//foundation/graphic/lite/interfaces/kits/utils",
    "//foundation/graphic/lite/interfaces/kits/config",
  ]
  cflags = [
    "-fPIC",
    "-Wall",
  ]
  public_deps = [
  ]
  if (target_os == "linux") {
    cflags += [ "-D_SURFACE_LINUX_" ]
  }
  ldflags = ["-ldisplay_gralloc"]
  deps = [
    "//third_party/bounds_checking_function:libsec_shared"
  ]
}

config("surface_external_library_config") {
  include_dirs = [
    "//foundation/graphic/lite/interfaces/kits/surface",
    "include",
    "//drivers/hdf/lite/hdi/display/include"
  ]
}

group("litesurface") {
  deps = [
    ":surface",
  ]
}
